--- a/src/roles/test_role/tasks/main.yml
+++ b/src/roles/test_role/tasks/main.yml
@@ -9,7 +9,7 @@
 
 - name: move hello_world.c to /tmp
   copy:
-    src: /home/researcher/sample_prog/main.c
+    src: /root/demo/main.c
     dest: /tmp/main.c
 
 - name: compile and run simple hello world
